src/snapshots/grab__test_zellij__render_with_selection.snap
---
source: src/test_zellij.rs
expression: frame.to_trimmed_string()
---
 Current Folder: /home/user/project (Ctrl f to change)
 _

 PANE  vim ~/project/src/main.rs
 PANE  bash   <Enter>
 PANE  nvim ~/project/Cargo.toml

















 Hint: start your search with 'struct', 'fn' or 'enum' to look for rust assets
